# casbin-tokio-postgres-adapter

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: adapter.rs
