[package]
name = "tokio-postgres-adapter"
version = "0.1.0"
authors = ["Eason Chai <hackerchai.com@gmail.com>", "Cheng JIANG <jiang.cheng@vip.163.com>", "David Miguel <dvdmgl@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "tokio-postgres adapter for casbin-rs"
homepage= "https://github.com/casbin-rs/postgres-adapter"
readme= "README.md"

[dependencies]
casbin = { version = "2.17", default-features = false }
async-trait = "0.1"
dotenv = { version = "0.15.0", default-features = false }
tokio = { version = "1.40", default-features = false, optional = true }
tokio-postgres = { version = "0.7", default-features = false }
deadpool-postgres = { version = "0.14", default-features = false }
deadpool = { version = "0.12", default-features = false }
futures = "0.3"

[features]
default = ["runtime-tokio"]
runtime-tokio = ["casbin/runtime-tokio", "deadpool/rt_tokio_1"]

[dev-dependencies]
tokio = { version = "1.40", features = ["full"] }

[profile.release]
codegen-units = 1
lto           = true
opt-level     = 3

[profile.dev]
split-debuginfo = "unpacked"
